--- a/public/project/client/index.html
+++ b/public/project/client/index.html
@@ -58,12 +58,17 @@
     <script src="services/customer.service.client.js"></script>
     <script src="services/professional.service.client.js"></script>
     <script src="services/user.service.client.js"></script>
+    <script src="services/appointment.service.client.js"></script>
 
     <!--Controllers-->
     <script src="views/main/main.controller.js"></script>
     <script src="views/header/header.controller.js"></script>
     <script src="views/users/professional/register.controller.js"></script>
+    <script src="views/users/professional/availability.controller.js"></script>
     <script src="views/users/customer/register.controller.js"></script>
+    <script src="views/users/customer/upcoming.controller.js"></script>
+    <script src="views/users/professional/upcoming.controller.js"></script>
+    <script src="views/users/customer/appointment.controller.js"></script>
     <script src="views/users/login.controller.js"></script>
     <script src="views/users/customer/profile.controller.js"></script>
     <script src="views/users/professional/profile.controller.js"></script>
